	(parse_version/1): Accept string() again.

	* src/core/exmpp_stringprep.erl (control_reuse_arg/2): Don't treat
	errors from control specially. Reformulate a comment more positively.
	Style.

	* src/core/exmpp_xml.erl: Add documentation to new functions. Style.

	* c_src/exmpp_xml.c (make_attribute): Fix the case where the
	attribute's value length isn't provided.

2009-01-09  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_stanza.erl: get_type/1, get_lang/1 and get_id/1
	return binary().

	* src/core/exmpp_stream.erl: get_id/1, get_lang/1,
	get_initiating_entity/1 and get_receiving_entity/1 return binary().

	* src/core/exmpp_iq.erl : get_type/1 works on binary attributes.

	* src/core/exmpp_message.erl: Likewise.

	* src/core/exmpp_presence.erl: Likewise.

	* src/networ/exmpp_session.erl: Update to newer interfaces.

2009-01-08  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* c_src/exmpp_xml.c, src/core/exmpp_iq.erl, src/core/exmpp_jid.erl,
	src/core/exmpp_stanza.erl, src/core/exmpp_xml.erl, testsuite/iq.erl,
	testsuite/jid.erl, testsuite/stanza.erl: Use binary to represent
	attribute values.

	* src/core/exmpp_stringprep.erl, src/core/exmpp_jid.erl: Fix shared
	binary managment.

2009-01-03  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_jid.erl: Change #jid structure to use binary()
	storage for node, domain and resource.

	* testsuite/jid.erl: Update testsuite.

	* src/network/exmpp_session.erl: Update to new parser options and JID
	API.

	* include/exmpp_jid.hrl, exmpp_xmpp.hrl: Prepare to hide #jid record
	definition. 

2008-12-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl: style(9).

	* c_src/exmpp_stringprep.c, c_src/exmpp_xml_expat.c,
	c_src/exmpp_xml_legacy.erl, c_src/exmpp_xml_libxml2.c: Change the way
	structures are initialized because the previous initializing style was
	C99 and Visual C++ (and other C++ compilers) doesn't understand this
	standard.
