@@ -21,6 +21,10 @@
 	* c_src/exmpp_xml.c (make_attribute): Fix the case where the
 	attribute's value length isn't provided.
 
+	* src/core/exmpp_jid.erl: Update documentation. Style.
+	(bare_jid_to_jid/2): Add support for an automatically generated random
+	resource.
+
 2009-01-09  Pablo Polvorin  <pablo.polvorin@process-one.net>
 
 	* src/core/exmpp_stanza.erl: get_type/1, get_lang/1 and get_id/1
